# se-toolkit-hackathon

./: .env  .env.docker.example  README.md  docker-compose.yml  index.md
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/app/: database.py  main.py  run.py  settings.py
backend/app/data/: init.sql
backend/app/db/: __init__.py  dishes.py
backend/app/models/: __init__.py  dish.py
backend/app/routers/: check.py  dishes.py
backend/tests/unit/: test_dish_matching.py
bot/: .env.bot.example  Dockerfile  README.md  bot.py  config.py  pyproject.toml
bot/handlers/: base.py  check.py  help.py  intent.py  menu.py  start.py
bot/services/: __init__.py  backend_client.py  llm_client.py
frontend/: admin.html  index.html
frontend/static/: style-admin.css  style-customer.css
infra/caddy/: Caddyfile.json  Dockerfile
